--- a/index.html
+++ b/index.html
@@ -102,28 +102,28 @@
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="hero-content">
               <h1 data-aos="fade-up" data-aos-delay="200">
-                Creative Designer &amp;
-                <span class="accent-text">Visual Storyteller</span>
+                Economista Financiero &amp;
+                <span class="accent-text">Especialista en Riesgos</span>
               </h1>
               <p class="hero-description" data-aos="fade-up" data-aos-delay="300">
-                Crafting meaningful digital experiences through thoughtful design and innovative solutions. I blend creativity with strategy to bring brands to life and connect with audiences on a deeper level.
+                Economista especializado en Finanzas Públicas, con más de 25 años de experiencia en el sector público y privado, enfocado en la formulación, evaluación y seguimiento de proyectos de inversión pública bajo el marco de Invierte.pe.
               </p>
               <div class="hero-actions" data-aos="fade-up" data-aos-delay="400">
-                <a href="#portfolio" class="btn-primary">View My Work</a>
-                <a href="#contact" class="btn-secondary">Get In Touch</a>
+                <a href="#portfolio" class="btn-primary">Mi Trabajo</a>
+                <a href="#contact" class="btn-secondary">Mi contacto</a>
               </div>
               <div class="hero-stats" data-aos="fade-up" data-aos-delay="500">
                 <div class="stat-item">
-                  <span class="stat-number">50+</span>
-                  <span class="stat-label">Projects Completed</span>
-                </div>
-                <div class="stat-item">
-                  <span class="stat-number">3+</span>
-                  <span class="stat-label">Years Experience</span>
+                  <span class="stat-number">100+</span>
+                  <span class="stat-label">Proyectos Elaborados</span>
                 </div>
                 <div class="stat-item">
                   <span class="stat-number">25+</span>
-                  <span class="stat-label">Happy Clients</span>
+                  <span class="stat-label">Años de Experiencia</span>
+                </div>
+                <div class="stat-item">
+                  <span class="stat-number">15+</span>
+                  <span class="stat-label">Empresas Satisfechas</span>
                 </div>
               </div>
             </div>
@@ -135,15 +135,15 @@
                 <img src="assets/img/profile/profile-square-13.webp" alt="Creative Designer Portfolio" class="img-fluid main-image">
                 <div class="floating-card card-1" data-aos="fade-up" data-aos-delay="600">
                   <i class="bi bi-palette"></i>
-                  <span>UI/UX Design</span>
+                  <span>Especialista en Riesgos</span>
                 </div>
                 <div class="floating-card card-2" data-aos="fade-up" data-aos-delay="700">
                   <i class="bi bi-code-square"></i>
-                  <span>Web Development</span>
+                  <span>Finanzas</span>
                 </div>
                 <div class="floating-card card-3" data-aos="fade-up" data-aos-delay="800">
                   <i class="bi bi-camera"></i>
-                  <span>Photography</span>
+                  <span>Big Data</span>
                 </div>
               </div>
             </div>
@@ -163,7 +163,7 @@
           <div class="col-lg-10">
 
             <div class="intro-header text-center" data-aos="fade-up" data-aos-delay="150">
-              <h1>Hi, I'm Mark Andersen</h1>
+              <h1>Hola, Yo soy José Gómez</h1>
               <p class="subtitle">Digital Product Designer &amp; Creative Strategist</p>
             </div>
 
