--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
             <div class="intro-header text-center" data-aos="fade-up" data-aos-delay="150">
               <h1>Hola, Yo soy José Gómez</h1>
-              <p class="subtitle">Digital Product Designer &amp; Creative Strategist</p>
+              <p class="subtitle">Especialista Económico Financiero &amp; Riesgos - Big Data</p>
             </div>
 
             <div class="main-content-wrapper">
@@ -178,11 +178,11 @@
                     <div class="profile-meta">
                       <div class="location">
                         <i class="bi bi-geo-alt"></i>
-                        <span>San Francisco, CA</span>
+                        <span>Piura, Perú</span>
                       </div>
                       <div class="status">
                         <div class="status-indicator"></div>
-                        <span>Available for projects</span>
+                        <span>Disponible para Proyectos</span>
                       </div>
                     </div>
                   </div>
@@ -192,9 +192,9 @@
                   <div class="content-area">
 
                     <div class="story-block">
-                      <p class="lead-text">I craft digital experiences that bridge the gap between user needs and business goals. With 7 years of experience in product design, I've helped startups and Fortune 500 companies create meaningful connections with their users.</p>
+                      <p class="lead-text">Amplia experiencia brindando asistencia técnica a Gobiernos Regionales y Locales en la estructuración de inversiones eficientes, rentables y sostenibles. Reconocido por liderar equipos multidisciplinarios, optimizar el uso de recursos públicos y garantizar el cumplimiento de metas e indicadores del Programa Multianual de Inversiones. Comprometido con la mejora continua de la gestión pública y la transparencia en el uso de fondos públicos.</p>
 
-                      <p>My design philosophy centers around empathy, iteration, and impact. I believe great design isn't just about aesthetics—it's about solving real problems and creating value for both users and businesses.</p>
+                      <p>Experto en análisis económico-financiero de proyectos de infraestructura y servicios, evaluación de sostenibilidad financiera y elaboración de informes técnicos sustentatorios.</p>
                     </div>
 
                     <div class="expertise-grid">
@@ -203,8 +203,8 @@
                           <i class="bi bi-lightbulb"></i>
                         </div>
                         <div class="expertise-content">
-                          <h4>Product Strategy</h4>
-                          <p>User research, journey mapping, and strategic design thinking</p>
+                          <h4>Estrategia de mi servicio</h4>
+                          <p>Investigación de mercados, estrategia económica financiera, y análisis de pronósticos</p>
                         </div>
                       </div>
 
@@ -213,8 +213,8 @@
                           <i class="bi bi-phone"></i>
                         </div>
                         <div class="expertise-content">
-                          <h4>Mobile &amp; Web Design</h4>
-                          <p>Responsive interfaces and seamless user experiences</p>
+                          <h4>Móvil &amp;página Web</h4>
+                          <p>Especialista en elaboración de proyectos de inversión</p>
                         </div>
                       </div>
 
@@ -223,15 +223,15 @@
                           <i class="bi bi-graph-up"></i>
                         </div>
                         <div class="expertise-content">
-                          <h4>Design Systems</h4>
-                          <p>Scalable component libraries and brand consistency</p>
+                          <h4>Sistema de análisis</h4>
+                          <p>Especializado en Invierte pe y Finanzas Corporativas</p>
                         </div>
                       </div>
                     </div>
 
                     <div class="philosophy-quote" data-aos="fade-up" data-aos-delay="450">
                       <div class="quote-mark">"</div>
-                      <p>Good design is not about perfection—it's about understanding, empathy, and continuous learning from the people who use what we create.</p>
+                      <p>Mi pasión son los estudios de mercado, de esta manera las empresas tienen una brújula para poder llegar a la meta.</p>
                     </div>
 
                   </div>
