--- a/index.html
+++ b/index.html
@@ -244,14 +244,14 @@
               <div class="row align-items-center">
                 <div class="col-lg-6">
                   <div class="collaboration-text">
-                    <h3>Let's create something amazing together</h3>
-                    <p>Whether you're looking to redesign an existing product or build something completely new, I'd love to explore how we can bring your vision to life.</p>
+                    <h3>Vamos a hacer realidad tu proyecto</h3>
+                    <p>Ya sea que esté buscando rediseñar un proyecto existente o construir algo completamente nuevo, me encantaría explorar cómo podemos darle vida a su visión.</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="action-buttons">
-                    <a href="#portfolio" class="btn-custom primary">View Case Studies</a>
-                    <a href="#contact" class="btn-custom secondary">Start a Project</a>
+                    <a href="#portfolio" class="btn-custom primary">Observa mis casos de estudios</a>
+                    <a href="#contact" class="btn-custom secondary">Comienza un Proyecto</a>
                   </div>
                 </div>
               </div>
@@ -277,21 +277,21 @@
                 <div class="stat-number">
                   <span data-purecounter-start="0" data-purecounter-end="127" data-purecounter-duration="1" class="purecounter"></span>
                 </div>
-                <p class="stat-label">Voluptas nulla pariatur</p>
+                <p class="stat-label">Una meta sin un plan es solo un deseo</p>
               </div>
 
               <div class="stat-item" data-aos="fade-up" data-aos-delay="300">
                 <div class="stat-number">
                   <span data-purecounter-start="0" data-purecounter-end="89" data-purecounter-duration="1" class="purecounter"></span>K
                 </div>
-                <p class="stat-label">Nostrum exercitationem</p>
+                <p class="stat-label">Nuestra meta</p>
               </div>
 
               <div class="stat-item" data-aos="fade-up" data-aos-delay="400">
                 <div class="stat-number">
                   <span data-purecounter-start="0" data-purecounter-end="234" data-purecounter-duration="1" class="purecounter"></span>+
                 </div>
-                <p class="stat-label">Temporibus autem</p>
+                <p class="stat-label">Es momento de juntarnos</p>
               </div>
             </div>
 
@@ -301,8 +301,8 @@
                   <i class="bi bi-trophy"></i>
                 </div>
                 <div class="achievement-content">
-                  <h4>Excellence Award</h4>
-                  <p>Ut enim ad minima veniam quis</p>
+                  <h4>Premio de Excelencia</h4>
+                  <p>Tableros de mando</p>
                 </div>
               </div>
 
@@ -311,8 +311,8 @@
                   <i class="bi bi-star"></i>
                 </div>
                 <div class="achievement-content">
-                  <h4>Recognition</h4>
-                  <p>Sed do eiusmod tempor incididunt</p>
+                  <h4>Reconocimiento</h4>
+                  <p>siempre mostraremos nuestros avances según tus necesidades</p>
                 </div>
               </div>
 
@@ -321,8 +321,8 @@
                   <i class="bi bi-gem"></i>
                 </div>
                 <div class="achievement-content">
-                  <h4>Innovation</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur</p>
+                  <h4>Innovación</h4>
+                  <p>Hacemos realidad tus ideas innovadoras</p>
                 </div>
               </div>
             </div>
@@ -339,8 +339,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Skills</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>habilidades</h2>
+        <p>Uso tecnología de vanguardia para los proyectos - BIM.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -348,7 +348,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-10">
             <div class="intro-content text-center mb-5" data-aos="fade-up" data-aos-delay="150">
-              <p class="lead-text">Mastery achieved through continuous exploration and dedicated refinement of craft</p>
+              <p class="lead-text">Maestría en Big Data e Inteligencia de Negocios</p>
             </div>
           </div>
         </div>
