--- a/index.html
+++ b/index.html
@@ -359,14 +359,14 @@
 
               <div class="skill-category skills-animation" data-aos="fade-up" data-aos-delay="200">
                 <div class="category-header">
-                  <h3 class="category-title">Technical Expertise</h3>
-                  <p class="category-subtitle">Core development and technical skills</p>
+                  <h3 class="category-title">Experiencia técnica</h3>
+                  <p class="category-subtitle">finanzas corporativas y estudios de mercado</p>
                 </div>
                 <div class="skills-list">
                   <div class="skill-row">
                     <div class="skill-info">
-                      <span class="skill-name">Full-Stack Development</span>
-                      <span class="skill-percentage">92%</span>
+                      <span class="skill-name">Elaboración de proyectos</span>
+                      <span class="skill-percentage">99%</span>
                     </div>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100"></div>
@@ -374,8 +374,8 @@
                   </div>
                   <div class="skill-row">
                     <div class="skill-info">
-                      <span class="skill-name">Cloud Architecture</span>
-                      <span class="skill-percentage">88%</span>
+                      <span class="skill-name">Invierte pe</span>
+                      <span class="skill-percentage">100%</span>
                     </div>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"></div>
@@ -383,7 +383,7 @@
                   </div>
                   <div class="skill-row">
                     <div class="skill-info">
-                      <span class="skill-name">Database Design</span>
+                      <span class="skill-name">Dashboards</span>
                       <span class="skill-percentage">85%</span>
                     </div>
                     <div class="progress">
@@ -395,13 +395,13 @@
 
               <div class="skill-category skills-animation" data-aos="fade-up" data-aos-delay="250">
                 <div class="category-header">
-                  <h3 class="category-title">Creative Design</h3>
-                  <p class="category-subtitle">Visual and user experience design</p>
+                  <h3 class="category-title">Gestión Pública moderna</h3>
+                  <p class="category-subtitle">Elaboración de procesos modernos en elaboración de proyectos</p>
                 </div>
                 <div class="skills-list">
                   <div class="skill-row">
                     <div class="skill-info">
-                      <span class="skill-name">UI/UX Design</span>
+                      <span class="skill-name">Fast Track - Proyectos ágiles</span>
                       <span class="skill-percentage">94%</span>
                     </div>
                     <div class="progress">
@@ -410,8 +410,8 @@
                   </div>
                   <div class="skill-row">
                     <div class="skill-info">
-                      <span class="skill-name">Brand Identity</span>
-                      <span class="skill-percentage">86%</span>
+                      <span class="skill-name">Proyectos únicos</span>
+                      <span class="skill-percentage">90%</span>
                     </div>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100"></div>
@@ -419,7 +419,7 @@
                   </div>
                   <div class="skill-row">
                     <div class="skill-info">
-                      <span class="skill-name">Motion Graphics</span>
+                      <span class="skill-name">Dashboard inteligentes</span>
                       <span class="skill-percentage">78%</span>
                     </div>
                     <div class="progress">
@@ -431,13 +431,13 @@
 
               <div class="skill-category skills-animation" data-aos="fade-up" data-aos-delay="300">
                 <div class="category-header">
-                  <h3 class="category-title">Strategic Leadership</h3>
-                  <p class="category-subtitle">Management and business acumen</p>
+                  <h3 class="category-title">Estrategia de mercado</h3>
+                  <p class="category-subtitle">Gestión empresarial acorde al mercado</p>
                 </div>
                 <div class="skills-list">
                   <div class="skill-row">
                     <div class="skill-info">
-                      <span class="skill-name">Project Management</span>
+                      <span class="skill-name">Gerente de Proyectos</span>
                       <span class="skill-percentage">90%</span>
                     </div>
                     <div class="progress">
@@ -446,7 +446,7 @@
                   </div>
                   <div class="skill-row">
                     <div class="skill-info">
-                      <span class="skill-name">Team Coordination</span>
+                      <span class="skill-name">Lider de coordinación</span>
                       <span class="skill-percentage">87%</span>
                     </div>
                     <div class="progress">
@@ -455,7 +455,7 @@
                   </div>
                   <div class="skill-row">
                     <div class="skill-info">
-                      <span class="skill-name">Strategic Planning</span>
+                      <span class="skill-name">Palneamiento estratégico</span>
                       <span class="skill-percentage">83%</span>
                     </div>
                     <div class="progress">
@@ -475,40 +475,40 @@
                 <div class="highlight-icon">
                   <i class="bi bi-trophy"></i>
                 </div>
-                <h4 class="highlight-title">Years of Experience</h4>
+                <h4 class="highlight-title">Años de experiencia</h4>
                 <div class="experience-number">
                   <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
-                  <span class="experience-label">Years</span>
+                  <span class="experience-label">Años</span>
                 </div>
-                <p class="highlight-description">Dedicated to mastering the craft of digital innovation and strategic problem-solving.</p>
+                <p class="highlight-description">Dedicado a dominar el arte de la innovación en proyectos de inversión y la resolución estratégica de problemas.</p>
               </div>
 
               <div class="technologies-section" data-aos="fade-up" data-aos-delay="400">
-                <h5 class="tech-title">Primary Technologies</h5>
+                <h5 class="tech-title">Tecnología BIM</h5>
                 <div class="tech-stack">
                   <div class="tech-item">
                     <i class="bi bi-filetype-js"></i>
-                    <span>JavaScript</span>
+                    <span>BIM</span>
                   </div>
                   <div class="tech-item">
                     <i class="bi bi-code-square"></i>
-                    <span>React</span>
+                    <span>Fast Track</span>
                   </div>
                   <div class="tech-item">
                     <i class="bi bi-server"></i>
-                    <span>Node.js</span>
+                    <span>PMO</span>
                   </div>
                   <div class="tech-item">
                     <i class="bi bi-cloud"></i>
-                    <span>AWS</span>
+                    <span>Big Data</span>
                   </div>
                   <div class="tech-item">
                     <i class="bi bi-palette"></i>
-                    <span>Figma</span>
+                    <span>Power Bi</span>
                   </div>
                   <div class="tech-item">
                     <i class="bi bi-diagram-3"></i>
-                    <span>Docker</span>
+                    <span>Stata</span>
                   </div>
                 </div>
               </div>
