--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                   </div>
                   <div class="achievement-item">
                     <div class="achievement-date">2023</div>
-                    <div class="achievement-text">AWS Solutions Architect Pro</div>
+                    <div class="achievement-text">Analista de datos</div>
                   </div>
                 </div>
               </div>
@@ -544,8 +544,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Resumen</h2>
+        <p>MBA en Business Intelligence y Big Data + SAS Instituto Europeo de Postgrado, Año de culminación 2021.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -557,8 +557,8 @@
                 <div class="icon-wrapper">
                   <i class="bi bi-briefcase-fill"></i>
                 </div>
-                <h2>Professional Experience</h2>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam.</p>
+                <h2>Experiencia Profesional</h2>
+                <p>•	Diplomado como Especialista en IOARR y Formulación de proyectos de Inversión Pública Abril y Noviembre del 2024. Instituto Centro de Capacitación y Desarrollo.</p>
               </div>
 
               <div class="experience-timeline">
@@ -568,13 +568,13 @@
                     <div class="position-meta">
                       <span class="timeline-year">2023 - Present</span>
                     </div>
-                    <h3>Creative Director</h3>
-                    <h4>Innovation Studios Ltd</h4>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores eos qui ratione.</p>
+                    <h3>Especialista económico financiero</h3>
+                    <h4>OTASS - LIMA</h4>
+                    <p>Especialista en reflotamiento de empresas del sector de agua y saneamiento</p>
                     <div class="key-achievements">
-                      <span class="achievement-tag">Team Leadership</span>
-                      <span class="achievement-tag">Strategic Planning</span>
-                      <span class="achievement-tag">Creative Vision</span>
+                      <span class="achievement-tag">Lider de equipo</span>
+                      <span class="achievement-tag">Planificación estratégica</span>
+                      <span class="achievement-tag">Visión Creativa</span>
                     </div>
                   </div>
                 </div>
@@ -583,11 +583,11 @@
                   <div class="timeline-dot"></div>
                   <div class="timeline-content">
                     <div class="position-meta">
-                      <span class="timeline-year">2020 - 2023</span>
+                      <span class="timeline-year">2020 - 2025</span>
                     </div>
-                    <h3>Senior Product Designer</h3>
-                    <h4>Digital Innovations Corp</h4>
-                    <p>Ut enim ad minima veniam quis nostrum exercitationem ullam corporis suscipit laboriosam nisi ut aliquid ex ea commodi.</p>
+                    <h3>Especialista Económico</h3>
+                    <h4>Analista de Riesgos</h4>
+                    <p>Analista de riesgos bancarios y financieros.</p>
                   </div>
                 </div>
 
@@ -595,11 +595,11 @@
                   <div class="timeline-dot"></div>
                   <div class="timeline-content">
                     <div class="position-meta">
-                      <span class="timeline-year">2017 - 2020</span>
+                      <span class="timeline-year">2017 - 2023</span>
                     </div>
-                    <h3>UX/UI Designer</h3>
-                    <h4>Creative Solutions Agency</h4>
-                    <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur vel illum.</p>
+                    <h3>Especialista en gestión de proyectos de inversión Pública</h3>
+                    <h4>Especializado en la elaboración de proyectos</h4>
+                    <p>Elaboración de proyectos de invierte pe en el sector de agua y saneamiento</p>
                   </div>
                 </div>
               </div>
@@ -612,8 +612,8 @@
                 <div class="icon-wrapper">
                   <i class="bi bi-mortarboard-fill"></i>
                 </div>
-                <h2>Education &amp; Qualifications</h2>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.</p>
+                <h2>Education &amp; Calificaciones</h2>
+                <p>Pertenecí al quinto superior</p>
               </div>
 
               <div class="education-grid">
@@ -623,15 +623,15 @@
                       <i class="bi bi-award"></i>
                     </div>
                     <div class="degree-info">
-                      <h3>Master of Design</h3>
-                      <p class="institution">Tempus Design Institute</p>
-                      <span class="graduation-year">2015 - 2017</span>
+                      <h3>Universidad</h3>
+                      <p class="institution">Universidad Nacional de Piura</p>
+                      <span class="graduation-year">1993 - 1998</span>
                     </div>
                   </div>
                   <div class="education-details">
-                    <p>Magna aliqua ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Graduado con honeres</p>
                     <div class="honors">
-                      <span class="honor-badge">Magna Cum Laude</span>
+                      <span class="honor-badge">Quinto superior</span>
                     </div>
                   </div>
                 </div>
@@ -642,18 +642,18 @@
                       <i class="bi bi-laptop"></i>
                     </div>
                     <div class="degree-info">
-                      <h3>Bachelor of Arts</h3>
-                      <p class="institution">Creative Arts University</p>
-                      <span class="graduation-year">2011 - 2015</span>
+                      <h3>Bachiller en Economía</h3>
+                      <p class="institution">Universidad Nacional de Piura</p>
+                      <span class="graduation-year">1993 - 1998</span>
                     </div>
                   </div>
                   <div class="education-details">
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur excepteur sint.</p>
+                    <p>Facultad de economía</p>
                   </div>
                 </div>
 
                 <div class="certification-section" data-aos="fade-up" data-aos-delay="400">
-                  <h4>Professional Certifications</h4>
+                  <h4>Profesional</h4>
                   <div class="certifications">
                     <div class="cert-item">
                       <i class="bi bi-patch-check"></i>
