--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="header-top">
       <div class="profile-img">
-        <img src="assets/img/profile/profile-square-14.webp" alt="" class="img-fluid">
+        <img src="assets/img/profile/profile-square-14.jpg" alt="" class="img-fluid">
       </div>
 
       <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -132,7 +132,7 @@
           <div class="col-lg-6 order-1 order-lg-2">
             <div class="hero-image" data-aos="fade-up" data-aos-delay="300">
               <div class="image-wrapper">
-                <img src="assets/img/profile/profile-square-13.webp" alt="Creative Designer Portfolio" class="img-fluid main-image">
+                <img src="assets/img/profile/profile-square-13.jpeg" alt="Creative Designer Portfolio" class="img-fluid main-image">
                 <div class="floating-card card-1" data-aos="fade-up" data-aos-delay="600">
                   <i class="bi bi-palette"></i>
                   <span>Especialista en Riesgos</span>
@@ -173,7 +173,7 @@
                 <div class="col-lg-4" data-aos="fade-right" data-aos-delay="200">
                   <div class="profile-section">
                     <div class="profile-image-container">
-                      <img src="assets/img/profile/profile-square-15.webp" class="img-fluid" alt="Sarah Chen">
+                      <img src="assets/img/profile/profile-square-15.jpeg" class="img-fluid" alt="Sarah Chen">
                     </div>
                     <div class="profile-meta">
                       <div class="location">
