--- a/index.html
+++ b/index.html
@@ -518,11 +518,11 @@
                 <div class="achievement-list">
                   <div class="achievement-item">
                     <div class="achievement-date">2024</div>
-                    <div class="achievement-text">Certified Kubernetes Administrator</div>
+                    <div class="achievement-text">Certificado en PMO</div>
                   </div>
                   <div class="achievement-item">
                     <div class="achievement-date">2023</div>
-                    <div class="achievement-text">Google Cloud Professional Architect</div>
+                    <div class="achievement-text">Especialista en Big Data</div>
                   </div>
                   <div class="achievement-item">
                     <div class="achievement-date">2023</div>
@@ -566,7 +566,7 @@
                   <div class="timeline-dot"></div>
                   <div class="timeline-content">
                     <div class="position-meta">
-                      <span class="timeline-year">2023 - Present</span>
+                      <span class="timeline-year">2023 - Actualidad</span>
                     </div>
                     <h3>Especialista económico financiero</h3>
                     <h4>OTASS - LIMA</h4>
@@ -692,8 +692,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Portafolio</h2>
+        <p>Proyectos de inversión elaborados con innovación y metodologías ágiles.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -702,11 +702,11 @@
 
           <div class="filters-wrapper" data-aos="fade-up" data-aos-delay="200">
             <ul class="portfolio-filters isotope-filters">
-              <li data-filter="*" class="filter-active">All Work</li>
-              <li data-filter=".filter-branding">Branding</li>
-              <li data-filter=".filter-web">Web Design</li>
-              <li data-filter=".filter-photography">Photography</li>
-              <li data-filter=".filter-print">Print Design</li>
+              <li data-filter="*" class="filter-active">Proyectos</li>
+              <li data-filter=".filter-branding">Proyectos privados</li>
+              <li data-filter=".filter-web">Diseño desde la idea</li>
+              <li data-filter=".filter-photography">Fotografía</li>
+              <li data-filter=".filter-print">Diseño de ingenieria moderna</li>
             </ul>
           </div>
 
@@ -725,11 +725,11 @@
                 </div>
                 <div class="portfolio-content">
                   <div class="portfolio-meta">
-                    <span class="portfolio-category">Brand Identity</span>
+                    <span class="portfolio-category">Identidad de marca</span>
                     <span class="portfolio-year">2024</span>
                   </div>
-                  <h3 class="portfolio-title">Elemental Branding</h3>
-                  <p class="portfolio-description">Comprehensive brand identity design focusing on natural elements and sustainable business practices.</p>
+                  <h3 class="portfolio-title">Portafolio de proyectos</h3>
+                  <p class="portfolio-description">Proyectos ecológicos llevados a la realidad.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -747,11 +747,11 @@
                 </div>
                 <div class="portfolio-content">
                   <div class="portfolio-meta">
-                    <span class="portfolio-category">Web Application</span>
+                    <span class="portfolio-category">Proyectos de agua e Irrigación</span>
                     <span class="portfolio-year">2024</span>
                   </div>
-                  <h3 class="portfolio-title">Digital Workspace</h3>
-                  <p class="portfolio-description">Modern web application designed for remote collaboration with intuitive user experience and clean aesthetics.</p>
+                  <h3 class="portfolio-title">Proyectos ecológicos</h3>
+                  <p class="portfolio-description">Proyectos de presas, protección de cuencas hidrográficas, canales de irrigación, puentes, forestación</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -769,11 +769,11 @@
                 </div>
                 <div class="portfolio-content">
                   <div class="portfolio-meta">
-                    <span class="portfolio-category">Photography</span>
+                    <span class="portfolio-category">Proyectos sociales</span>
                     <span class="portfolio-year">2023</span>
                   </div>
-                  <h3 class="portfolio-title">Urban Narratives</h3>
-                  <p class="portfolio-description">Street photography series capturing the essence of metropolitan life and human connections.</p>
+                  <h3 class="portfolio-title">Acorde al mercado</h3>
+                  <p class="portfolio-description">Conectados con la naturaleza</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -791,11 +791,11 @@
                 </div>
                 <div class="portfolio-content">
                   <div class="portfolio-meta">
-                    <span class="portfolio-category">Editorial Design</span>
+                    <span class="portfolio-category">Diseño Editorial</span>
                     <span class="portfolio-year">2024</span>
                   </div>
-                  <h3 class="portfolio-title">Annual Report Design</h3>
-                  <p class="portfolio-description">Sophisticated annual report combining data visualization with compelling storytelling and premium print finishes.</p>
+                  <h3 class="portfolio-title">Reporte de diseño anual</h3>
+                  <p class="portfolio-description">proyecto ecológico y social de la cuenca del rio Poechos en Piura</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -813,11 +813,11 @@
                 </div>
                 <div class="portfolio-content">
                   <div class="portfolio-meta">
-                    <span class="portfolio-category">Package Design</span>
+                    <span class="portfolio-category">Diseño de igenieria</span>
                     <span class="portfolio-year">2023</span>
                   </div>
-                  <h3 class="portfolio-title">Artisan Collection</h3>
-                  <p class="portfolio-description">Luxury packaging design series celebrating traditional craftsmanship with contemporary minimalist approach.</p>
+                  <h3 class="portfolio-title">Trabajo con Arquitectos e ingenieros especialistas</h3>
+                  <p class="portfolio-description">Un trabajo en equipo para hacer realidad el proyecto</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -835,11 +835,11 @@
                 </div>
                 <div class="portfolio-content">
                   <div class="portfolio-meta">
-                    <span class="portfolio-category">E-commerce</span>
+                    <span class="portfolio-category">Puentes a la necesidad de la población</span>
                     <span class="portfolio-year">2024</span>
                   </div>
-                  <h3 class="portfolio-title">Sustainable Commerce</h3>
-                  <p class="portfolio-description">Eco-conscious e-commerce platform design promoting sustainable products with seamless shopping experience.</p>
+                  <h3 class="portfolio-title">Puentes acotados a la realidad y proyección poblacional</h3>
+                  <p class="portfolio-description">Ingenieria moderna con estudio de mercado.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
